crates/grafana-plugin-sdk-macros/tests/ui-fail/non_impl_service.stderr
error[E0277]: the trait bound `MyPlugin: DataService` is not satisfied
 --> tests/ui-fail/non_impl_service.rs:7:5
  |
7 |     #[grafana_plugin_sdk::main(services(data))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DataService` is not implemented for `MyPlugin`
  |
  = help: the trait `DataService` is implemented for `backend::noop::NoopService`
note: required by a bound in `grafana_plugin_sdk::backend::Plugin::<D, Q, R, S>::data_service`
 --> $WORKSPACE/crates/grafana-plugin-sdk/src/backend/mod.rs
  |
  |     pub fn data_service<T>(self, service: T) -> Plugin<D, T, R, S>
  |            ------------ required by a bound in this associated function
  |     where
  |         T: DataService + Send + Sync + 'static,
  |            ^^^^^^^^^^^ required by this bound in `Plugin::<D, Q, R, S>::data_service`
  = note: this error originates in the attribute macro `grafana_plugin_sdk::main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `start` exists for struct `Plugin<NoopService, MyPlugin, NoopService, NoopService>`, but its trait bounds were not satisfied
 --> tests/ui-fail/non_impl_service.rs:7:5
  |
5 |     struct MyPlugin;
  |     --------------- doesn't satisfy `MyPlugin: DataService`
6 |
7 |     #[grafana_plugin_sdk::main(services(data))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `MyPlugin: DataService`
note: the trait `DataService` must be implemented
 --> $WORKSPACE/crates/grafana-plugin-sdk/src/backend/data.rs
  |
  | pub trait DataService {
  | ^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `grafana_plugin_sdk::main` (in Nightly builds, run with -Z macro-backtrace for more info)
