crates/grafana-plugin-sdk-macros/tests/ui-fail/non_impl_service.rs
#![allow(dead_code, unused_variables)]

mod a {
    #[derive(Clone)]
    struct MyPlugin;

    #[grafana_plugin_sdk::main(services(data))]
    async fn plugin() -> MyPlugin {
        MyPlugin
    }
}

fn main() {}


